# wordle-solver-v3

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
cmake/: MyCPackOptions.cmake
scripts/: PKGBUILD  gen_filelist.sh  parse.py
src/: algorithm.c  algorithm.h  cache.c  cache.h  cliparse.c  cliparse.h  config.c  config.h  filelist.cmake  fsutils.c  fsutils.h  main.c  pattern.c  pattern.h  solver.c  solver.h  test.c  userio.c  userio.h  wordlist.c  wordlist.h
test/: test.c
wordlists/: short.txt
